update product admin usecase