@@ -1,4 +1,4 @@
-package com.backend.core.usecase.business.product;
+package com.backend.core.usecase.usecases.product;
 
 import com.backend.core.entity.api.ApiResponse;
 import com.backend.core.entity.category.model.Catalog;
@@ -9,78 +9,55 @@ import com.backend.core.entity.product.model.Product;
 import com.backend.core.entity.product.model.ProductImagesManagement;
 import com.backend.core.entity.product.model.ProductManagement;
 import com.backend.core.infrastructure.business.category.repository.CatalogRepository;
-import com.backend.core.infrastructure.business.product.repository.*;
+import com.backend.core.infrastructure.business.product.repository.ProductImagesManagementRepository;
+import com.backend.core.infrastructure.business.product.repository.ProductManagementRepository;
+import com.backend.core.infrastructure.business.product.repository.ProductRepository;
 import com.backend.core.infrastructure.config.database.CustomQueryRepository;
-import com.backend.core.usecase.service.CrudService;
+import com.backend.core.usecase.UseCase;
 import com.backend.core.usecase.statics.ErrorTypeEnum;
 import com.backend.core.usecase.statics.RequestPurpose;
-import com.backend.core.usecase.util.process.ValueRenderUtils;
-import jakarta.servlet.http.HttpServletRequest;
+import lombok.Value;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Service;
+import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
-@Service
-@Qualifier("ProductCrudServiceImpl")
-public class ProductCrudServiceImpl implements CrudService {
+@Component
+public class AddProductUseCase extends UseCase<AddProductUseCase.InputValue, ApiResponse> {
     @Autowired
     ProductRepository productRepo;
-
+    @Autowired
+    CustomQueryRepository customQueryRepo;
     @Autowired
     ProductManagementRepository productManagementRepo;
-
     @Autowired
     ProductImagesManagementRepository productImagesManagementRepo;
-
     @Autowired
     CatalogRepository catalogRepo;
 
-    @Autowired
-    CustomQueryRepository customQueryRepo;
-
 
     @Override
-    public ResponseEntity<ApiResponse> singleCreationalResponse(Object paramObj, HttpServletRequest httpRequest) {
+    public ApiResponse execute(InputValue input) {
         try {
-            ProductDetailsRequestDTO request = (ProductDetailsRequestDTO) paramObj;
+            ProductDetailsRequestDTO request = input.getProductDetailsRequest();
             String unqualifiedRequestMsg = messageForUnqualifiedAddingRequest(request, RequestPurpose.ADD);
 
             if (unqualifiedRequestMsg != null) {
-                return new ResponseEntity<>(new ApiResponse("failed", unqualifiedRequestMsg), HttpStatus.BAD_REQUEST);
+                return new ApiResponse("failed", unqualifiedRequestMsg, HttpStatus.BAD_REQUEST);
             } else
                 return saveProductProcess(request, RequestPurpose.ADD);
         } catch (Exception e) {
             e.printStackTrace();
-            return new ResponseEntity<>(new ApiResponse("failed", ErrorTypeEnum.TECHNICAL_ERROR.name()), HttpStatus.INTERNAL_SERVER_ERROR);
+            return new ApiResponse("failed", ErrorTypeEnum.TECHNICAL_ERROR.name(), HttpStatus.INTERNAL_SERVER_ERROR);
         }
     }
 
-
-    @Override
-    public ResponseEntity<ApiResponse> updatingResponseByRequest(Object paramObj, HttpServletRequest httpRequest) {
-        try {
-            ProductDetailsRequestDTO request = (ProductDetailsRequestDTO) paramObj;
-            String unqualifiedRequestMsg = messageForUnqualifiedAddingRequest(request, RequestPurpose.EDIT);
-
-            if (unqualifiedRequestMsg != null) {
-                return new ResponseEntity<>(new ApiResponse("failed", unqualifiedRequestMsg), HttpStatus.BAD_REQUEST);
-            } else
-                return saveProductProcess(request, RequestPurpose.EDIT);
-        } catch (Exception e) {
-            e.printStackTrace();
-            return new ResponseEntity<>(new ApiResponse("failed", ErrorTypeEnum.TECHNICAL_ERROR.name()), HttpStatus.INTERNAL_SERVER_ERROR);
-        }
-    }
-
-    // save new product process
-    public ResponseEntity<ApiResponse> saveProductProcess(ProductDetailsRequestDTO request, RequestPurpose purpose) {
+    public ApiResponse saveProductProcess(ProductDetailsRequestDTO request, RequestPurpose purpose) {
         // save product first
         Product product = new Product();
         List<Catalog> categoryList = new ArrayList<>();
@@ -90,11 +67,11 @@ public class ProductCrudServiceImpl implements CrudService {
 
         // if this product is existed and the API is for adding -> error
         if (existedProduct != null && purpose.equals(RequestPurpose.ADD)) {
-            return new ResponseEntity<>(new ApiResponse("failed", "This product has been existed"), HttpStatus.BAD_REQUEST);
+            return new ApiResponse("failed", "This product has been existed", HttpStatus.BAD_REQUEST);
         }
         // if this product is not existed and the API is for editing -> error
         else if (existedProduct == null && purpose.equals(RequestPurpose.EDIT)) {
-            return new ResponseEntity<>(new ApiResponse("failed", "This product does not exist"), HttpStatus.BAD_REQUEST);
+            return new ApiResponse("failed", "This product does not exist", HttpStatus.BAD_REQUEST);
         }
 
         // build Product from ProductAddingRequestDTO
@@ -105,15 +82,13 @@ public class ProductCrudServiceImpl implements CrudService {
         return saveOtherTables(request, product, purpose);
     }
 
-
-    // save data to other tables process
-    public ResponseEntity<ApiResponse> saveOtherTables(ProductDetailsRequestDTO request, Product product, RequestPurpose purpose) {
+    public ApiResponse saveOtherTables(ProductDetailsRequestDTO request, Product product, RequestPurpose purpose) {
         List<ProductAttribute> attributes = request.getAttributes();
         String unqualifiedAttrMsg = messageForUnqualifiedAttribute(attributes);
 
         // check if every attribute is qualified to proceed
         if (unqualifiedAttrMsg != null) {
-            return new ResponseEntity<>(new ApiResponse("failed", unqualifiedAttrMsg), HttpStatus.BAD_REQUEST);
+            return new ApiResponse("failed", unqualifiedAttrMsg, HttpStatus.BAD_REQUEST);
         } else {
             productRepo.save(product);
 
@@ -125,7 +100,7 @@ public class ProductCrudServiceImpl implements CrudService {
                 Catalog category = catalogRepo.getCatalogById(cateId);
 
                 if (category == null) {
-                    return new ResponseEntity<>(new ApiResponse("failed", "Category does not exist"), HttpStatus.BAD_REQUEST);
+                    return new ApiResponse("failed", "Category does not exist", HttpStatus.BAD_REQUEST);
                 }
 
                 customQueryRepo.insertCatalogWithProducts(cateId, product.getId());
@@ -143,31 +118,42 @@ public class ProductCrudServiceImpl implements CrudService {
             }
 
             if (purpose.equals(RequestPurpose.ADD)) {
-                return new ResponseEntity<>(new ApiResponse("success", "Add new product successfully"), HttpStatus.OK);
-            } else return new ResponseEntity<>(new ApiResponse("success", "Edit product successfully"), HttpStatus.OK);
+                return new ApiResponse("success", "Add new product successfully", HttpStatus.OK);
+            } else return new ApiResponse("success", "Edit product successfully", HttpStatus.OK);
         }
     }
 
-
-    // save new data to product images management table
-    public void saveProductImagesManagement(ProductAttribute attribute, Product product) {
-        try {
-            ProductImagesManagementPrimaryKeys pimPk = new ProductImagesManagementPrimaryKeys();
-            ProductImagesManagement productImgMng = new ProductImagesManagement();
-
-            pimPk.setProductId(product.getId());
-            pimPk.setColor(attribute.getColor());
-
-            productImgMng.setProduct(product);
-            productImgMng.setId(pimPk);
-            productImgMng.getImagesFromList(attribute.getImages());
-
-            productImagesManagementRepo.save(productImgMng);
-        } catch (Exception e) {
-            e.printStackTrace();
+    // check if every attribute is qualified to keep proceeding
+    public String messageForUnqualifiedAttribute(List<ProductAttribute> attributes) {
+        for (ProductAttribute attribute : attributes) {
+            if (attribute.getQuantity() == null || attribute.getSizes().length != attribute.getQuantity().length) {
+                return "Each size of product's attribute must have quantity";
+            } else if (attribute.getSizes() == null || attribute.getSizes().length == 0) {
+                return "Product's attribute must have sizes";
+            } else if (attribute.getImages() == null || attribute.getImages().length < 1 || attribute.getImages().length > 4) {
+                return "Product's attribute must have 1 image at least and 4 images at most";
+            } else if (attribute.getColor() == null || attribute.getColor().isBlank()) {
+                return "Product's attribute must have color";
+            }
         }
+
+        return null;
     }
 
+    // check if product adding request is qualified to proceed
+    public String messageForUnqualifiedAddingRequest(ProductDetailsRequestDTO request, RequestPurpose purpose) {
+        if (purpose.equals(RequestPurpose.EDIT) && request.getId() <= 0) {
+            return "Please input product's id";
+        } else if (request.getName() == null || request.getName().isBlank()) {
+            return "Please input product's name";
+        } else if (request.getOriginalPrice() < 1 || request.getSellingPrice() < 1) {
+            return "Prices must be higher than 0";
+        } else if (request.getBrand() == null || request.getBrand().isBlank()) {
+            return "Please input product's brand";
+        } else if (request.getAttributes() == null || request.getAttributes().isEmpty()) {
+            return "Please input product's features or attributes";
+        } else return null;
+    }
 
     // save new data to product management and product import management tables
     public void saveNewProductManagement(ProductAttribute attribute, Product product) {
@@ -193,6 +179,25 @@ public class ProductCrudServiceImpl implements CrudService {
         }
     }
 
+    // save new data to product images management table
+    public void saveProductImagesManagement(ProductAttribute attribute, Product product) {
+        try {
+            ProductImagesManagementPrimaryKeys pimPk = new ProductImagesManagementPrimaryKeys();
+            ProductImagesManagement productImgMng = new ProductImagesManagement();
+
+            pimPk.setProductId(product.getId());
+            pimPk.setColor(attribute.getColor());
+
+            productImgMng.setProduct(product);
+            productImgMng.setId(pimPk);
+            productImgMng.getImagesFromList(attribute.getImages());
+
+            productImagesManagementRepo.save(productImgMng);
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
+
 
     // save edited data to product management and product import management tables
     public void saveEditedProductManagement(ProductAttribute attribute, Product product) {
@@ -204,10 +209,10 @@ public class ProductCrudServiceImpl implements CrudService {
 
             // existed product color
             if (pmList != null && !pmList.isEmpty()) {
-                List<Integer> tblAvaiQuantityList = pmList.stream().map(pm -> pm.getAvailableQuantity()).collect(Collectors.toList());
+                List<Integer> tblAvaiQuantityList = pmList.stream().map(ProductManagement::getAvailableQuantity).toList();
                 List<Integer> rqQuantityList = new ArrayList<>();
 
-                List<String> tblSizeList = pmList.stream().map(pm -> pm.getSize()).collect(Collectors.toList());
+                List<String> tblSizeList = pmList.stream().map(ProductManagement::getSize).collect(Collectors.toList());
                 List<String> rqSizeList = new ArrayList<>();
 
                 Collections.addAll(rqSizeList, attribute.getSizes());
@@ -286,39 +291,8 @@ public class ProductCrudServiceImpl implements CrudService {
         }
     }
 
-
-    // check if every attribute is qualified to keep proceeding
-    public String messageForUnqualifiedAttribute(List<ProductAttribute> attributes) {
-        for (ProductAttribute attribute : attributes) {
-            if (attribute.getSizes() == null || attribute.getQuantity() == null || attribute.getSizes().length != attribute.getQuantity().length) {
-                return "Each size of product's attribute must have quantity";
-            } else if (attribute.getSizes() == null || attribute.getSizes().length == 0) {
-                return "Product's attribute must have sizes";
-            } else if (attribute.getQuantity() == null || attribute.getQuantity().length == 0) {
-                return "Product's attribute must have quantity for each size";
-            } else if (attribute.getImages() == null || attribute.getImages().length < 1 || attribute.getImages().length > 4) {
-                return "Product's attribute must have 1 image at least and 4 images at most";
-            } else if (attribute.getColor() == null || attribute.getColor().isBlank()) {
-                return "Product's attribute must have color";
-            }
-        }
-
-        return null;
-    }
-
-
-    // check if product adding request is qualified to proceed
-    public String messageForUnqualifiedAddingRequest(ProductDetailsRequestDTO request, RequestPurpose purpose) {
-        if (purpose.equals(RequestPurpose.EDIT) && request.getId() <= 0) {
-            return "Please input product's id";
-        } else if (request.getName() == null || request.getName().isBlank()) {
-            return "Please input product's name";
-        } else if (request.getOriginalPrice() < 1 || request.getSellingPrice() < 1) {
-            return "Prices must be higher than 0";
-        } else if (request.getBrand() == null || request.getBrand().isBlank()) {
-            return "Please input product's brand";
-        } else if (request.getAttributes() == null || request.getAttributes().isEmpty()) {
-            return "Please input product's features or attributes";
-        } else return null;
+    @Value
+    public static class InputValue implements InputValues {
+        ProductDetailsRequestDTO productDetailsRequest;
     }
 }
